# TravelAgent

./: .debug-journal.md  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
docs/: SESSION_HANDOFF.md  agent_runtime.md  architecture.html  architecture.md  evidence_pipeline.md  provider_matrix.md  source_connectors.md
frontend/: README.md  package-lock.json  package.json
scripts/: airport_api_probe.py  airport_itinerary_probe.py  build_triple_store.py  companion_detect_probe.py  curation_probe.py  multicity_probe.py  multicity_quality_probe.py  sweep_cities_light.py  sweep_full_verify.py
tests/: __init__.py  conftest.py  test_accommodation_sources.py  test_advisor.py  test_agent_runs.py  test_agent_runtime_evidence_sources.py  test_api_trips.py  test_approval_booking.py  test_budget.py  test_companion_cities.py  test_conversational_intent.py  test_critic_feasibility.py  test_curator.py  test_datetime_utc.py  test_daylight.py  test_destination.py  test_destination_switch.py  test_events.py  test_flight_live_search.py  test_fx_rate.py  test_geo_resolver.py  test_google_flight_parse.py  test_google_places_parse.py  test_hotel_rooms.py  test_http_fetch.py  test_intake.py  test_itinerary_arranger.py  test_itinerary_edit.py  test_llm_answer.py  test_llm_clients.py  test_llm_flight_context.py  test_local_transport.py  test_naver_flight_browser_connector.py  test_naver_hotel_parse.py  test_nearby_day_trips.py  test_persistence_sources.py  test_planning_components.py  test_provider_quality.py  (+9 more)
(+259 files in other folders)
