[project]
name = "travel-agent"
version = "0.1.0"
description = "MVP backend for a guarded multi-agent travel planning system"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.0",
    "fastapi>=0.110.0",
    "psycopg[binary]>=3.1.0",
    "pydantic>=2.6.0",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.27.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["travel_agent*"]
exclude = ["tests*", "alembic*"]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".claude"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
plugins = []
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
